# wav-to-mp3

./: .gitignore  README.md  pyproject.toml
wav_to_mp3/: __init__.py  __main__.py  main.py
